public/stylesheets/application.css
/* ... */
#product-name h2 {
  display: inline;
}
#product_name {
  width: 60%;
}
#edit-product-name {
  margin-top: 10px;
}
#product-name, #product-details {
  position: relative;
  clear: left;
}
#product-details, #product-info, .input-item {
  overflow: hidden;
}
#product-info {
  text-align: left;
  min-height: 35px;
  padding-bottom: 5px;
}
#display-product-info .field-value {
  font-weight: bold;
  font-size:20px;
}
#edit-product-category {
  padding: 15px 5px 10px;
}
#product-info .field-name {
  margin-top: 5px;
  margin-bottom: 15px;
  font-size:20px;
}
.edit_product #product_price, .edit_product #product_discount {
  width: 110px;
}
#product-info #product-qualifiers-list select {
  width: 140px;
}
#product_unit {
  width: 100px;
}
#product-info .section-title {
  display: none;
}
#product-qualifiers {
  padding-left: 0px;
}
#product-qualifiers li {
  list-style: none;
}
#product-image {
  text-align: center;
  width: 450px;
  margin-right: 10px;
  margin-bottom: 5px;
  float: left;
  border: 1px solid #AAA;
}
.product-pic {
  width: 450px;
}
#product-image p {
  font-size: 11px;
  font-style: italic;
  margin-top: 0px;
  color: #555;
}
#display-product-image {
  margin-bottom: 10px;
  overflow: hidden;
}
#edit-product-image {
  position: relative;
  margin-top: 5px;
}
#product-qualifiers-list {
  padding: 0px;
  margin-bottom: 10px;
}
#product-qualifiers-list li {
  list-style: none;
}
#product-qualifiers-list .product-qualifier-title, #product-qualifiers-list .product-certifier-title {
  margin-right: 20px;
}
#edit-product-button-ui-inputs {
  margin-top: 20px;
}
#new-product-input h3 {
  margin-top: 0px;
}
.input-image .ui-icon, #display-add-input-button .hint {
  display: none;
}
#product-qualifiers-list .icon-delete {
  margin-left: 10px;
}
#product-qualifiers-list .icon-add {
  margin-top: 5px;
}
#display-product-info .unavailable-product .product-price {
  text-decoration: line-through;
  color: #555;
}
#display-product-info .alert {
  font-weight: bold;
  color: #D33;
  margin-top: 10px;
}
.selected-unit {
  font-weight: bold;
}

/* * * * * * Price details  * * * * * */

#display-price-details .price-details-list {
  padding-left: 0px;
}

#display-price-details .price-details-list li {
  list-style: none;
}

#display-price-details .price-details-list li .price-detail-name {
  width: 200px;
}

#display-price-details .price-details-list li .price-detail-name,
#display-price-details .price-details-list li .price-detail-price {
  display: inline-block;
}

#manage-product-details-form .formfieldline {
  white-space: nowrap;
}

#manage-product-details-form .formlabel,
#manage-product-details-form .formfield {
  display: inline-block;
}

#manage-product-details-form #add-new-cost {
  float: right;
}

/* * * Progress bar on price details edition * * */

#display-manage-price-details .ui-widget-content {
  border: 1px solid #DDD;
}

#display-manage-price-details .ui-progressbar {
  height: 20px;
}

#display-manage-price-details .ui-progressbar .ui-progressbar-value {
  margin: 0px;
  background-color: #A40000;
  filter:alpha(opacity=70);
  -moz-opacity: 0.7;
  opacity: 0.7;
}

#display-manage-price-details .ui-progressbar .ui-progressbar-value.price-described {
  background-color: #4E9A06;
}

#display-manage-price-details #price-details-info {
  margin: 10px 0px;
}

#display-manage-price-details #details-progressbar {
  position: relative;
  width: 410px;
  display: inline-block;
}

#display-manage-price-details #progressbar-text {
  position: absolute;
  top: 5px;
  right: 7px;
  font-size: 11px;
}

#display-manage-price-details #progressbar-icon {
  display: inline-block;
  cursor: pointer;
}

#display-manage-price-details #details-progressbar .ui-corner-left,
#display-manage-price-details #details-progressbar .ui-corner-right {
  -moz-border-radius-bottomleft: 0px;
  -moz-border-radius-bottomright: 0px;
  -moz-border-radius-topleft: 0px;
  -moz-border-radius-topright: 0px;
}

/* ==> public/stylesheets/controller_cms.css <== */

table.cms-articles {
  table-layout: fixed;
  width: 100%;
}

table.cms-articles td:first-child,
table.cms-articles th:first-child {
  width: 50%;
}

table.cms-articles td:nth-child(2) {
  font-size: 10px;
}

table.cms-articles td:last-child,
table.cms-articles th:last-child {
  width: 121px;
}

table.cms-articles img {
  width: 16px;
  height: 16px;
}

table.cms-articles a.icon {
  display: block;
  border: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

table.cms-articles a.icon, table.cms-articles a.icon-parent-folder {
  padding: 0px 0px 3px 20px;
  background-repeat: no-repeat;
}
table.cms-articles .icon:hover {
  background-color: transparent;
}

#content table.cms-articles .button:hover,
#content table.cms-articles .button {
  margin: 0;
  float: left;
  border-right: none;
}

#content table.cms-articles .button:last-child {
  border-right: 1px solid #ccc;
}

.select-article-type {
  padding: 5px 20px;
  width: 455px;
}

.article-types {
  padding-left: 5px;
  margin-top: 20px;
}
.article-types li {
  list-style: none;
  float: left;
  width: 180px;
  height: 50px;
  background-repeat: no-repeat;
  background-position: 5px 5px;
  padding-left: 30px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
}
.article-types .description {
  color: #888a85;
  font-size: smaller;
}
.article-types .icon-newrss-feed, #content .icon-rss-feed {
  background-image: url(../images/icons-mime/rss-feed-16.png);
}
.article-types a {
  text-decoration: none;
  color: black;
}
.article-types li.mouseover {
  background-color: #eeeeec;
}
.controller-cms #article-subitems-hide.hide-button {
  float: right;
  color: white;
}
.controller-cms #article-subitems-show.show-button {
  float: right;
}
.controller-cms #article-subitems-hide.hide-button:hover {
  background-color: transparent;
  color: black;
}
/* ... */

